[package]
name = "ws-server"
version = "0.1.0"
authors = ["Mauricio Muratori <maurimura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0"
actix = "^0.8"
actix-web-actors = "^1.0"
listenfd = "0.3"
rand = "0.6"