[package]
name = "ws-server"
version = "0.1.0"
authors = ["Mauricio Muratori <maurimura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"